# vhss-hashwave

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v1.2.0.md  ROADMAP.md  SECURITY.md  SHA256SUMS.json  SUPPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_question.yml
.github/workflows/: tests.yml
docs/: api.md  architecture.md  hardware_validation.md  installation.md  limitations.md  mathematical_model.md  quickstart.md  reproducibility.md
docs/fa/: ARCHITECTURE_FA.md  ASIC_BRIDGE_FA.md  FINAL_REPORT_FA.md  LIMITATIONS_FA.md
examples/: quadratic_search.py
experiments/: full_validation.py  hash_vs_prng.py  make_sncs_figures.py  sncs_benchmark.py  sncs_merge_results.py
hashwave/: __init__.py  baselines.py  bridge.py  cli.py  expr.py  hdc.py  hypervector.py  miner.py  search.py
results/: sncs_clean_install.txt  sncs_coverage.txt  sncs_unit_tests_43.txt  sncs_wheel_build.txt
results/sncs/: baselines_seed1.json  baselines_seed2.json  merged_results.json  primary_00_04.json  primary_05_09.json  smoke_30tasks_1seed.json
scripts/: check_placeholders.py  verify_release.py
tests/: test_baselines.py  test_cli.py  test_crypto.py  test_expr.py  test_hdc.py  test_search.py
