[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vhss-hashwave"
version = "1.2.0"
description = "Verifiable hash-seeded symbolic search research software"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Mehdi Moradi"}]
keywords = ["symbolic regression", "genetic programming", "proof of work", "SHA-256", "reproducible research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mmhh20/vhss-hashwave"
Repository = "https://github.com/mmhh20/vhss-hashwave"
Issues = "https://github.com/mmhh20/vhss-hashwave/issues"
Documentation = "https://github.com/mmhh20/vhss-hashwave/tree/main/docs"

[project.scripts]
vhss = "hashwave.cli:main"
hashwave = "hashwave.cli:main"

[tool.setuptools]
packages = ["hashwave"]

[tool.coverage.run]
source = ["hashwave"]
branch = true
omit = ["hashwave/cli.py", "hashwave/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
